Update social card image

--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,11 @@ plugins:
   - jekyll-seo-tag
   - jekyll-analytics
 
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: /img/sut-cover.jpg
+
 # Server Config options
 # livereload: true     # You no longer need to include --livereload
