--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sacramento Urban Technology Lab
 description: Accelerating quality of life for all Sacramentans through data-driven testing and experimentation.
-url: https://sutl.innovatesac.org
+url: https://innovatesac.org
 logo: /img/favicon.jpg
 twitter_username: innovatesac
 github_username:  innovatesac
