better meat and govtech update

--- a/_data/focus-areas.yml
+++ b/_data/focus-areas.yml
@@ -13,7 +13,7 @@
 - title: Internet of Things (IoT) and Cybersecurity
   icon: shield
   color: rgba-red-strong
-- title: Govtech and Civic Tech
+- title: Government (Policy) and Civic Tech
   icon: university
   color: rgba-grey-strong
 - title: Workforce Development
